[gd_scene load_steps=2 format=2]

[ext_resource path="res://events/DebugEvent2.gd" type="Script" id=1]

[node name="EventBox" type="Control"]
margin_right = 318.0
margin_bottom = 241.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="shadeBKG" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 240.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialogBKG" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 220.0
color = Color( 0.298039, 0.290196, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainText" type="Label" parent="."]
margin_left = 53.0
margin_top = 34.0
margin_right = 273.0
margin_bottom = 107.0
text = "A seal swims up to your boat. \"Care for a game? Double or nothing. I'll call a bet, you call my flop, belly or back!\" it asks, just before it dives under the water and leaps into the air."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 40.5
margin_right = 106.0
margin_bottom = 90.5
grow_horizontal = 2
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BellyButton" type="Button" parent="Buttons"]
margin_right = 68.0
margin_bottom = 50.0
text = "Bellyflop"

[node name="BackButton" type="Button" parent="Buttons"]
margin_left = 88.0
margin_right = 154.0
margin_bottom = 50.0
text = "Backflop"

[node name="DeclineButton" type="Button" parent="Buttons"]
margin_left = 174.0
margin_right = 261.0
margin_bottom = 50.0
text = "Say Nothing"

[node name="EndButton" type="Button" parent="Buttons"]
visible = false
margin_left = 281.0
margin_right = 293.0
margin_bottom = 50.0

[connection signal="pressed" from="Buttons/BellyButton" to="." method="_on_BellyButton_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Buttons/DeclineButton" to="." method="_on_DeclineButton_pressed"]
[connection signal="pressed" from="Buttons/EndButton" to="." method="_on_EndButton_pressed"]
